--- a/pre.ipynb
+++ b/pre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hdulist = fits.open(\"../../gra/HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050929/st_2418807291_p.fit\") #scattered\n",
+    "# hdulist = fits.open(\"../../gra/HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050929/st_2418807291_p.fit\") #scattered\n",
     "#hdulist = fits.open(\"../../gra/HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051013/st_2456811983_w.fit\") #smear\n",
-    "# hdulist = fits.open(\"../../gra/HAY_A_AMICA_3_HAYAMICA_V1_0/data/20040517/st_1035463706_p.fit\") #moon\n",
+    "hdulist = fits.open(\"../../gra/HAY_A_AMICA_3_HAYAMICA_V1_0/data/20040517/st_1035463706_p.fit\") #moon\n",
+    "# hdulist = fits.open(\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489428266_b.fit\") #itokawa surface\n",
     "hdu = hdulist[0]\n",
     "data = hdu.data\n",
     "header = hdu.header\n",
@@ -44,15 +45,17 @@
     "startH = header[\"START_H\"]\n",
     "startV = header[\"START_V\"]\n",
     "filt = header[\"FILTER_0\"]\n",
-    "tEXP = header[\"EXP_0\"]"
+    "tEXP = header[\"EXP_0\"]\n",
+    "num_bin = header[\"BINNING\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#smear correction\n",
     "def get_smear(NV, NH, tEXP, Isky, data):\n",
     "    tVCT = 12 * 1024 * 10 ** -6#μs\n",
     "\n",
@@ -75,10 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#flat correction\n",
     "def get_flat(filt):\n",
     "    result = 0\n",
     "    home_dir = os.path.expanduser(\"~\")\n",
@@ -98,45 +102,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ishiguro_flat\n",
-    "def get_flat(filt):\n",
-    "    result = 0\n",
-    "    home_dir = os.path.expanduser(\"~\")\n",
-    "    p = os.path.join(home_dir, \"Documents/after_graduate2/FLAT_NEW\")\n",
-    "    for f in glob.glob(p+\"/FLAT_\"+filt+\".fits\"):\n",
-    "        result = fits.open(f)\n",
-    "        result = result[0].data\n",
-    "    return result\n",
-    "def flat_cor(filt, data,startH,startV,x_axs,y_axs):\n",
-    "    result = 0\n",
-    "    flat_im = get_flat(filt)\n",
-    "    \n",
-    "    result = data/flat_im[startV:startV+y_axs,startH:startH+x_axs]\n",
-    "\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "297.26872"
+       "305.38872000000003"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#bias correction\n",
     "def get_bias(DAY):\n",
     "    result = 0\n",
     "\n",
@@ -153,10 +134,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#dark correction\n",
     "def get_dark(T):\n",
     "    result = 0\n",
     "    d0_im = 3.60\n",
@@ -170,10 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#scattered light correction\n",
     "def make_coord(x,y):\n",
     "    a = np.array([[[x,y]]])\n",
     "    coordinate = np.tile(a,((2*x)-1,(2*y)-1,1))\n",
@@ -195,7 +178,7 @@
     "\n",
     "def scattered_light(xs, ys, filt, data):\n",
     "    result = np.zeros((header[\"NAXIS1\"],header[\"NAXIS2\"]))\n",
-    "\n",
+    "    # result = np.zeros((xs,ys))\n",
     "    Ai = {\"ul\":{\"1\":12.0,\"2\":8.0,\"3\":1.2,\"4\":1.0,\"5\":0.8,\"6\":0.7},\n",
     "      \"b\":{\"1\":10.0,\"2\":1.5,\"3\":0.3,\"4\":0.4,\"5\":0.4,\"6\":0.5},\n",
     "      \"v\":{\"1\":10.0,\"2\":1.5,\"3\":0.3,\"4\":0.4,\"5\":0.4,\"6\":0.5},\n",
@@ -222,16 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "#moon\n",
-    "# bias = get_bias(DAY)\n",
-    "# bias_data = data - bias\n",
-    "# smear_data ,Ismear= get_smear(xs, ys, tEXP, get_bias(DAY), bias_data)\n",
-    "# flat_data = flat_cor(filt,smear_data,startH,startV,xs,ys)\n",
-    "# result = scattered_light(xs, ys, filt, flat_data)"
+    "bias = get_bias(DAY)\n",
+    "bias_data = data - bias\n",
+    "smear_data ,Ismear= get_smear(xs, ys, tEXP, get_bias(DAY), bias_data)\n",
+    "flat_data = flat_cor(filt,smear_data,startH,startV,xs,ys)\n",
+    "scattered_data = scattered_light(xs, ys, filt, flat_data)"
    ]
   },
   {
@@ -280,15 +263,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "result = flat_data - scattered_data\n",
+    "\n",
+    "hdu = fits.PrimaryHDU(result)\n",
+    "hdulist = fits.HDUList([hdu])\n",
+    "hdulist.writeto('moon_cor.fit',overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test\n",
+    "flat_data = flat_cor(filt,data,startH,startV,xs,ys)\n",
+    "result = scattered_light(xs, ys, filt, flat_data)\n",
     "data1 = flat_data-result\n",
     "\n",
     "hdu = fits.PrimaryHDU(data1)\n",
     "hdulist = fits.HDUList([hdu])\n",
-    "hdulist.writeto('moon_cor.fit',overwrite=True)"
+    "hdulist.writeto('test_cor.fit',overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((result==result1).all())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500以上の要素の平均: 754.3723029871288\n"
+     ]
+    }
+   ],
+   "source": [
+    "filtered_values = [value for row in result for value in row if value >= 500]\n",
+    "\n",
+    "# 条件を満たす要素の平均を計算\n",
+    "if filtered_values:\n",
+    "    average = sum(filtered_values) / len(filtered_values)\n",
+    "    print(\"500以上の要素の平均:\", average)\n",
+    "else:\n",
+    "    print(\"500以上の要素が見つかりませんでした。\")"
    ]
   }
  ],
@@ -308,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.15"
   },
   "orig_nbformat": 4
  },
