--- a/test.ipynb
+++ b/test.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
     "    return c\n",
     "\n",
     "def scattered_light(xs, ys, filt, data):\n",
-    "    result = np.zeros((header[\"NAXIS1\"],header[\"NAXIS2\"]))\n",
+    "    result = np.zeros((xs,ys))\n",
     "\n",
     "    Ai = {\"ul\":{\"1\":12.0,\"2\":8.0,\"3\":1.2,\"4\":1.0,\"5\":0.8,\"6\":0.7},\n",
     "      \"b\":{\"1\":10.0,\"2\":1.5,\"3\":0.3,\"4\":0.4,\"5\":0.4,\"6\":0.5},\n",
@@ -141,50 +141,49 @@
     "    for x in range(xs):\n",
     "        for y in range(ys):\n",
     "            result[x][y]=np.sum(np.multiply(fufoc[(xs-1)-x:(2*xs-1)-x,(ys-1)-y:(2*ys-1)-y],data))\n",
-    "    return result"
+    "    return data-result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
     "#flat correction\n",
-    "def get_flat(filt):\n",
+    "def get_flat(filt, num_bin):\n",
     "    result = 0\n",
     "    home_dir = os.path.expanduser(\"~\")\n",
-    "    p = os.path.join(home_dir, \"Documents/gra/HAY_A_AMICA_3_HAYAMICA_V1_0/data/preflight\")\n",
-    "    for f in glob.glob(p+\"/flat_\"+filt+\".fit\"):\n",
+    "    p = os.path.join(home_dir, \"Documents/after_graduate2/preprocess/flat_filt\")\n",
+    "    for f in glob.glob(p+\"/bin_\"+str(num_bin)+\"flat_\"+filt+\".fit\"):\n",
     "        result = fits.open(f)\n",
     "        result = result[0].data\n",
     "    return result\n",
-    "def flat_cor(filt, data,startH,startV,x_axs,y_axs):\n",
+    "def flat_cor(filt, data, num_bin, startH, startV, x_axs, y_axs):\n",
     "    result = 0\n",
-    "    flat_im = get_flat(filt)\n",
+    "    flat_im = get_flat(filt, num_bin)\n",
     "    \n",
-    "    result = data/flat_im[startV:startV+y_axs,startH:startH+x_axs]\n",
-    "\n",
+    "    result = data/flat_im[startV:(startV // num_bin)+y_axs, startH:(startH // num_bin)+x_axs]\n",
+    "    result[np.isinf(result)] = 0\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def DN2rad(filt, data):\n",
+    "def DN2ref(filt, data):\n",
     "    scale_factor = {\"ul\":6.259, \"b\":1.254, \"v\":1, \"w\":0.645, \"x\":0.6, \"p\":1.514, \"zs\":1}\n",
-    "    rad = 3.42 * pow(10,-3) * data\n",
-    "    result = scale_factor[filt] * rad\n",
+    "    result = scale_factor[filt] * data\n",
     "\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,22 +210,27 @@
     "    startV = header[\"START_V\"]\n",
     "    filt = header[\"FILTER_0\"]\n",
     "    tEXP = header[\"EXP_0\"]\n",
+    "    num_bin = header[\"BINNING\"]\n",
     "    status = check_need_smear(path)\n",
     "    if(status == 0):\n",
     "        bias = bias_cor(DAY)\n",
     "        bias_data = data - bias\n",
-    "        data = smear_cor(bias_data, startV, startH, tEXP, bias)\n",
-    "    flat_data = flat_cor(filt, data, startH, startV, xs, ys)\n",
+    "        data = smear_cor(bias_data, ys, xs, tEXP, bias)\n",
+    "    print(data[117][117])\n",
+    "    flat_data = flat_cor(filt, data, num_bin, startH, startV, xs, ys)\n",
+    "    print(flat_data[117][117])\n",
     "    scattered_data = scattered_light(xs, ys, filt, flat_data)\n",
+    "    print(scattered_data[117][117])\n",
+    "    # result = DN2ref(filt, scattered_data)\n",
     "\n",
     "    parts = path.split(\"st_\")\n",
     "    name = f\"cor{status}_st_{parts[1]}\"\n",
     "\n",
-    "    hdu = fits.PrimaryHDU(scattered_data)\n",
+    "    hdu = fits.PrimaryHDU(flat_data)\n",
     "    hdulist = fits.HDUList([hdu])\n",
     "    hdulist.writeto(name, overwrite=True)\n",
     "\n",
-    "\n",
+    "    return scattered_data\n",
     "    \n",
     "\n",
     "    "
@@ -234,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -355,6 +359,7 @@
       "/Users/hattoriakihiro/Documents/after_graduate2/preprocess/output_preprocess/20051104\n",
       "/Users/hattoriakihiro/Documents/after_graduate2/preprocess/output_preprocess\n",
       "/Users/hattoriakihiro/Documents/after_graduate2/preprocess/output_preprocess/20050829\n",
+      "/Users/hattoriakihiro/Documents/after_graduate2/preprocess/output_preprocess\n",
       "/Users/hattoriakihiro/Documents/after_graduate2/preprocess/output_preprocess\n"
      ]
     }
@@ -395,11 +400,128 @@
     "    target_path = Path(target_dir)\n",
     "    target_path.mkdir(exist_ok=True)\n",
     "    os.chdir(target_dir)\n",
-    "    for f in image_files:\n",
-    "        pre_correction(f)\n",
+    "    # for f in image_files:\n",
+    "    #     pre_correction(f)\n",
     "    print(os.getcwd())\n",
     "    os.chdir(\"..\")\n",
-    "    print(os.getcwd())"
+    "    print(os.getcwd())\n",
+    "os.chdir(original_directory)\n",
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2929\n",
+      "2930.5640419979127\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/pz/yjmbqcmx2t5cm5ff1q7nkqnc0000gn/T/ipykernel_93654/1468292297.py:14: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  result = data/flat_im[startV:(startV // num_bin)+y_axs, startH:(startH // num_bin)+x_axs]\n",
+      "/var/folders/pz/yjmbqcmx2t5cm5ff1q7nkqnc0000gn/T/ipykernel_93654/1468292297.py:14: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  result = data/flat_im[startV:(startV // num_bin)+y_axs, startH:(startH // num_bin)+x_axs]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_dir = \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/\"\n",
+    "save_dir = \"test\"\n",
+    "os.chdir(\"/Users/hattoriakihiro/Documents/after_graduate2/preprocess/\")\n",
+    "path = Path(save_dir)\n",
+    "path.mkdir(exist_ok=True)\n",
+    "image_files = sorted(glob.glob(os.path.join(test_dir, \"20051025\", '*.fit')), key = natural_keys)\n",
+    "fdata = pre_correction(image_files[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[8.31394863e+02 2.19865740e+02 1.08481913e+02 ... 4.87197007e+01\n",
+      "             inf 1.38613688e+03]\n",
+      " [0.00000000e+00 6.32745203e+02 3.31730183e+02 ... 9.70000363e+00\n",
+      "             inf 2.59956802e+03]\n",
+      " [1.11949780e+03 6.24334566e+02 4.25662279e+02 ... 1.95069178e+01\n",
+      "             inf 5.14771408e+03]\n",
+      " ...\n",
+      " [2.41777765e+02 2.23649899e+02 9.26829105e+00 ... 2.23461504e+01\n",
+      "             inf            inf]\n",
+      " [2.43050254e+02 2.37589770e+02 3.70689380e+01 ... 1.14916689e+01\n",
+      "             inf            inf]\n",
+      " [6.54819895e+02 6.46770767e+02 3.71116382e+01 ... 2.40551022e+01\n",
+      "             inf 1.04207785e+04]]\n",
+      "662.1213367655679\n",
+      "660.0237808927913\n",
+      "578.340492837947\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "578.340492837947"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(fdata)\n",
+    "\n",
+    "moon = fits.getdata(\"./moon_cor.fit\") #moon\n",
+    "a = pre_correction(\"../../gra/HAY_A_AMICA_3_HAYAMICA_V1_0/data/20040517/st_1035463706_p.fit\")\n",
+    "moon[117][117]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print((moon == a).all())\n",
+    "0//4"
    ]
   }
  ],
