--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
     "    print(flat_data[117][117])\n",
     "    scattered_data = scattered_light(flat_data, filt)\n",
     "    print(scattered_data[117][117])\n",
-    "    # result = DN2ref(filt, scattered_data)\n",
+    "    result = DN2ref(filt, scattered_data)\n",
     "\n",
     "    parts = path.split(\"st_\")\n",
     "    name = f\"cor{status}_st_{parts[1]}\"\n",
@@ -241,7 +241,6 @@
     "    hdulist = fits.HDUList([hdu])\n",
     "    hdulist.writeto(name, overwrite=True)\n",
     "\n",
-    "    return scattered_data\n",
     "    \n",
     "\n",
     "    "
@@ -403,7 +402,6 @@
     "print(directory_list)\n",
     "for subdir in directory_list:\n",
     "    image_files = sorted(glob.glob(os.path.join(base_directory, subdir, '*.fit')), key = natural_keys)\n",
-    "    print(image_files)\n",
     "\n",
     "os.chdir(original_directory)\n",
     "for directory in directory_list:\n",
@@ -411,8 +409,8 @@
     "    target_path = Path(target_dir)\n",
     "    target_path.mkdir(exist_ok=True)\n",
     "    os.chdir(target_dir)\n",
-    "    # for f in image_files:\n",
-    "    #     pre_correction(f)\n",
+    "    for f in image_files:\n",
+    "        pre_correction(f)\n",
     "    print(os.getcwd())\n",
     "    os.chdir(\"..\")\n",
     "    print(os.getcwd())\n",
@@ -1204,7 +1202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
