--- a/Feature_detection.ipynb
+++ b/Feature_detection.ipynb
@@ -49,9 +49,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490234689_b.fit\n",
+      "../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490238562_v.fit\n",
+      "../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490242451_w.fit\n",
+      "../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490246307_p.fit\n"
+     ]
+    }
+   ],
    "source": [
     "# FITS画像ファイルのリストを作成\n",
     "# image_files = [\"../../gra/HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2491939184_b.fit\",\n",
@@ -104,6 +115,7 @@
     "f = []\n",
     "images_uint16 = []\n",
     "for i,filename in enumerate(image_files):\n",
+    "    print(filename)\n",
     "    images_uint16.append(image_conv(filename))\n",
     "    f.append(fits.getdata(filename))\n",
     "    a,b = min_max(f[i], x_axis, y_axis)\n",
@@ -115,57 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "output_directory = os.path.join(home_dir, \"Documents/after_graduate2/output_perspective/\")\n",
     "registered_images = []\n",
-    "\n",
-    "\n",
-    "# 基準画像から他の画像への変換行列を計算し、変換を適用\n",
-    "for i,image_file in enumerate(images):\n",
-    "    \n",
-    "    # 画像の特徴点を検出\n",
-    "    akaze = cv2.AKAZE_create()\n",
-    "    keypoints1, descriptors1 = akaze.detectAndCompute(reference_image, None)\n",
-    "    keypoints2, descriptors2 = akaze.detectAndCompute(image_file, None)\n",
-    "    \n",
-    "    # 特徴点マッチングと変換行列の計算\n",
-    "    bf = cv2.BFMatcher()\n",
-    "    matches = bf.knnMatch(descriptors2, descriptors1, k = 2)\n",
-    "\n",
-    "    good_matches = []\n",
-    "    for m, n in matches:\n",
-    "        if m.distance < 0.75 * n.distance:\n",
-    "            good_matches.append([m])\n",
-    "    \n",
-    "    #適切なキーポイントを選択\n",
-    "    src_pts = np.float32([keypoints2[m[0].queryIdx].pt for m in good_matches]).reshape(-1, 1, 2)\n",
-    "    dst_pts = np.float32([keypoints1[m[0].trainIdx].pt for m in good_matches]).reshape(-1, 1, 2)\n",
-    "    H, status = cv2.findHomography(src_pts, dst_pts, cv2.RANSAC, 5.0)\n",
-    "    \n",
-    "    # 変換行列を適用して画像を基準画像の座標系に変換\n",
-    "    registered_image = cv2.warpPerspective(images_uint16[i], H, (image_file.shape[1], image_file.shape[0]))\n",
-    "    \n",
-    "    registered_images.append(registered_image)\n",
-    "\n",
-    "for i in range(len(registered_images)):\n",
-    "    output_jpgname = f\"{output_directory}{name_prefix[i]}.jpg\"\n",
-    "    output_filename = f\"{output_directory}{name_prefix[i]}.fits\"\n",
-    "    cv2.imwrite(output_jpgname, registered_images[i].astype('uint8'))\n",
-    "    fits.writeto(output_filename, registered_images[i], overwrite=True)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_directory = os.path.join(home_dir, \"Documents/after_graduate2/output_perspective_test/\")\n",
-    "registered_images = []\n",
+    "registered_png = []\n",
     "\n",
     "\n",
     "# 基準画像から他の画像への変換行列を計算し、変換を適用\n",
@@ -191,69 +159,17 @@
     "    M, inliers = cv2.estimateAffine2D(src_pts, dst_pts)\n",
     "    \n",
     "    # 変換行列を適用して画像を基準画像の座標系に変換\n",
-    "    registered_image = cv2.warpAffine(image_file, M, (image_file.shape[1], image_file.shape[0]))\n",
+    "    registered_image = cv2.warpAffine(images_uint16[i], M, (image_file.shape[1], image_file.shape[0]), flags=cv2.INTER_NEAREST)\n",
+    "    registered_png= cv2.warpAffine(image_file, M, (image_file.shape[1], image_file.shape[0]), flags=cv2.INTER_NEAREST)\n",
     "    \n",
     "    registered_images.append(registered_image)\n",
     "\n",
     "for i in range(len(registered_images)):\n",
-    "    output_jpgname = f\"{output_directory}{name_prefix[i]}.jpg\"\n",
+    "    output_jpgname = f\"{output_directory}{name_prefix[i]}.png\"\n",
     "    output_filename = f\"{output_directory}{name_prefix[i]}.fits\"\n",
-    "    cv2.imwrite(output_jpgname, registered_images[i])\n",
-    "    #fits出力用に,正規化した時にでた少数部分を足し合わせて正規化の逆の計算をし元画像と値が近くなるようにする\n",
-    "    reg_flo = []\n",
-    "    reg_flo = min_max_decode(registered_images[i].astype(float) + float_images[i], f[i], x_axis, y_axis)\n",
-    "    fits.writeto(output_filename, registered_images[i], overwrite=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<KeyPoint 0x7ff2b6ced1e0>, <KeyPoint 0x7ff2b1478f30>, <KeyPoint 0x7ff2b6c48930>, <KeyPoint 0x7ff2b6c487e0>, <KeyPoint 0x7ff2b6c488d0>, <KeyPoint 0x7ff2b6c48f60>, <KeyPoint 0x7ff2b6c48cc0>, <KeyPoint 0x7ff2b6c486c0>, <KeyPoint 0x7ff2b6c48960>, <KeyPoint 0x7ff2b6c486f0>, <KeyPoint 0x7ff2b6c48660>, <KeyPoint 0x7ff2b6c48a80>, <KeyPoint 0x7ff2b6c48f00>, <KeyPoint 0x7ff2b6c9d9f0>, <KeyPoint 0x7ff2b6c9da80>, <KeyPoint 0x7ff2b6c9d960>, <KeyPoint 0x7ff2b6c9d5d0>, <KeyPoint 0x7ff2b6c9df90>, <KeyPoint 0x7ff2b6c9d510>, <KeyPoint 0x7ff2b6c9dd80>, <KeyPoint 0x7ff2b6c9dd50>, <KeyPoint 0x7ff2b6c9d060>, <KeyPoint 0x7ff2b6c9d810>, <KeyPoint 0x7ff2b6c9dd20>, <KeyPoint 0x7ff2b6c9dea0>, <KeyPoint 0x7ff2b6c9d4e0>, <KeyPoint 0x7ff2b6c9d660>, <KeyPoint 0x7ff2b6c9dfc0>, <KeyPoint 0x7ff2b6c9d120>, <KeyPoint 0x7ff2b6c9d090>, <KeyPoint 0x7ff2b72662d0>, <KeyPoint 0x7ff2b7266120>, <KeyPoint 0x7ff2b7266270>, <KeyPoint 0x7ff2b72661e0>, <KeyPoint 0x7ff2b7266210>, <KeyPoint 0x7ff2b7266300>, <KeyPoint 0x7ff2b72664b0>, <KeyPoint 0x7ff2b72661b0>, <KeyPoint 0x7ff2b7266540>, <KeyPoint 0x7ff2b7266e40>, <KeyPoint 0x7ff2b7266180>, <KeyPoint 0x7ff2b72665d0>, <KeyPoint 0x7ff2b7266600>, <KeyPoint 0x7ff2b7266390>, <KeyPoint 0x7ff2b72666c0>, <KeyPoint 0x7ff2b7266ba0>, <KeyPoint 0x7ff2b7266720>, <KeyPoint 0x7ff2b7266660>, <KeyPoint 0x7ff2b72668a0>, <KeyPoint 0x7ff2b7266510>, <KeyPoint 0x7ff2b7266bd0>, <KeyPoint 0x7ff2b7266c90>, <KeyPoint 0x7ff2b7266750>, <KeyPoint 0x7ff2b72664e0>, <KeyPoint 0x7ff2b72665a0>, <KeyPoint 0x7ff2b7266930>, <KeyPoint 0x7ff2b7266960>, <KeyPoint 0x7ff2b7266990>, <KeyPoint 0x7ff2b72662a0>, <KeyPoint 0x7ff2b7266a20>, <KeyPoint 0x7ff2b72667b0>, <KeyPoint 0x7ff2b7266a80>, <KeyPoint 0x7ff2b7266b10>, <KeyPoint 0x7ff2b7266c30>, <KeyPoint 0x7ff2b7266870>, <KeyPoint 0x7ff2b7266840>, <KeyPoint 0x7ff2b7266b40>, <KeyPoint 0x7ff2b7266ab0>, <KeyPoint 0x7ff2b7266ae0>, <KeyPoint 0x7ff2b72667e0>, <KeyPoint 0x7ff2b7266360>, <KeyPoint 0x7ff2b7266420>, <KeyPoint 0x7ff2b7266450>, <KeyPoint 0x7ff2b7266630>, <KeyPoint 0x7ff2b7266480>, <KeyPoint 0x7ff2b72663f0>, <KeyPoint 0x7ff2b72663c0>, <KeyPoint 0x7ff2b72669f0>, <KeyPoint 0x7ff2b7266f00>, <KeyPoint 0x7ff2b7266240>, <KeyPoint 0x7ff2b7266fc0>, <KeyPoint 0x7ff2b7266f90>, <KeyPoint 0x7ff2b7266810>, <KeyPoint 0x7ff2b7266570>, <KeyPoint 0x7ff2b7266900>, <KeyPoint 0x7ff2b7266c60>, <KeyPoint 0x7ff2b7266e70>, <KeyPoint 0x7ff2b7266060>, <KeyPoint 0x7ff2b7266780>, <KeyPoint 0x7ff2b7266f60>, <KeyPoint 0x7ff2b72668d0>, <KeyPoint 0x7ff2b7266d80>, <KeyPoint 0x7ff2b72669c0>, <KeyPoint 0x7ff2b7266150>, <KeyPoint 0x7ff2b7266b70>, <KeyPoint 0x7ff2b7266de0>, <KeyPoint 0x7ff2b7266c00>, <KeyPoint 0x7ff2b7266cf0>, <KeyPoint 0x7ff2b7266e10>, <KeyPoint 0x7ff2b7266db0>, <KeyPoint 0x7ff2b7266d20>, <KeyPoint 0x7ff2b7266cc0>, <KeyPoint 0x7ff2b7266a50>, <KeyPoint 0x7ff2b7266690>, <KeyPoint 0x7ff2b7266030>, <KeyPoint 0x7ff2b7266d50>, <KeyPoint 0x7ff2b7266330>]\n",
-      "[[ 9.94294321e-01 -7.10153898e-04 -1.95799417e+00]\n",
-      " [ 1.80858413e-03  1.00243149e+00  1.77831998e+00]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(keypoints1)\n",
-    "print(M)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1095. 1873. 1816. ... 2705. 2708. 2338.]\n",
-      " [1147. 2003. 1918. ... 2741. 2737. 2388.]\n",
-      " [1167. 2049. 1963. ... 2759. 2706. 2356.]\n",
-      " ...\n",
-      " [ 669.  668.  669. ...  663.  670.  662.]\n",
-      " [ 663.  665.  661. ...  662.  670.  660.]\n",
-      " [ 663.  662.  667. ...  665.  663.  668.]]\n",
-      "[[ 660  774 1022 ... 2618 2556 2556]\n",
-      " [ 734  839 1124 ... 2459 2455 2508]\n",
-      " [ 874 1081 1648 ... 2487 2315 2313]\n",
-      " ...\n",
-      " [2432 2562 2846 ... 2764 2814 2817]\n",
-      " [2492 2548 2729 ... 2828 2814 2859]\n",
-      " [2688 2806 2822 ... 2907 2894 2954]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(reg_flo)\n",
-    "print(f[3])"
+    "    cv2.imwrite(output_jpgname, registered_png)\n",
+    "    fits.writeto(output_filename, registered_images[i], overwrite=True)\n",
+    "\n"
    ]
   },
   {
