--- a/test.ipynb
+++ b/test.ipynb
@@ -234,6 +234,10 @@
     "    print(scattered_data[117][117])\n",
     "    result = DN2ref(filt, scattered_data)\n",
     "\n",
+    "    target_dir = (\"before_ref\")\n",
+    "    target_path = Path(target_dir)\n",
+    "    target_path.mkdir(exist_ok=True)\n",
+    "    os.chdir(\"./before_ref\")\n",
     "    parts = path.split(\"st_\")\n",
     "    name = f\"cor{status}_st_{parts[1]}\"\n",
     "    print(f\"st_{parts[1]}  done\")\n",
@@ -241,6 +245,18 @@
     "    hdulist = fits.HDUList([hdu])\n",
     "    hdulist.writeto(name, overwrite=True)\n",
     "\n",
+    "    os.chdir(\"..\")\n",
+    "\n",
+    "    target_dir = (\"after_ref\")\n",
+    "    target_path = Path(target_dir)\n",
+    "    target_path.mkdir(exist_ok=True)\n",
+    "    os.chdir(\"./after_ref\")\n",
+    "    parts = path.split(\"st_\")\n",
+    "    name = f\"cor{status}_st_{parts[1]}\"\n",
+    "    print(f\"st_{parts[1]}  done\")\n",
+    "    hdu = fits.PrimaryHDU(scattered_data)\n",
+    "    hdulist = fits.HDUList([hdu])\n",
+    "    hdulist.writeto(name, overwrite=True)\n",
     "    \n",
     "\n",
     "    "
