--- a/Feature_detection.ipynb
+++ b/Feature_detection.ipynb
@@ -15,18 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "def min_max(x, ax, ay):\n",
     "    min_x = x.min()\n",
     "    max_x = x.max()\n",
-    "    a = np.zeros((ax, ay))\n",
-    "    b = np.zeros((ax, ay))\n",
-    "    z = np.zeros((ax, ay))\n",
-    "    for i in range(ax):\n",
-    "        for j in range(ay):\n",
+    "    a = np.zeros((ay, ax))\n",
+    "    b = np.zeros((ay, ax))\n",
+    "    z = np.zeros((ay, ax))\n",
+    "    for i in range(ay):\n",
+    "        for j in range(ax):\n",
     "            z[i][j] = (x[i][j] - min_x)/(max_x - min_x) * 255\n",
     "            a[i][j],b[i][j] = math.modf(z[i][j])\n",
     "\n",
@@ -49,17 +49,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490234689_b.fit\n",
-      "../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490238562_v.fit\n",
-      "../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490242451_w.fit\n",
-      "../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490246307_p.fit\n"
+      "./test/after_ref/cor1_st_2489428266_b.fit\n",
+      "(255, 236)\n",
+      "./test/after_ref/cor1_st_2489432123_v.fit\n",
+      "(255, 251)\n",
+      "./test/after_ref/cor1_st_2489436012_w.fit\n",
+      "(255, 256)\n",
+      "./test/after_ref/cor1_st_2489439885_p.fit\n",
+      "(255, 256)\n"
      ]
     }
    ],
@@ -75,10 +79,15 @@
     "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489436012_w.fit\",\n",
     "#                  \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489439885_p.fit\"]\n",
     "\n",
-    "image_files = [\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490234689_b.fit\",\n",
-    "               \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490238562_v.fit\",\n",
-    "               \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490242451_w.fit\",\n",
-    "               \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490246307_p.fit\"]\n",
+    "# image_files = [\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490234689_b.fit\",\n",
+    "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490238562_v.fit\",\n",
+    "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490242451_w.fit\",\n",
+    "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490246307_p.fit\"]\n",
+    "\n",
+    "image_files = [\"./test/after_ref/cor1_st_2489428266_b.fit\",\n",
+    "               \"./test/after_ref/cor1_st_2489432123_v.fit\",\n",
+    "               \"./test/after_ref/cor1_st_2489436012_w.fit\",\n",
+    "               \"./test/after_ref/cor1_st_2489439885_p.fit\"]\n",
     "\n",
     "\n",
     "# 出力ディレクトリとファイル名のプレフィックスを指定\n",
@@ -90,23 +99,19 @@
     "hdu = hdulist[0]\n",
     "data = hdu.data\n",
     "header = hdu.header\n",
-    "x_axis = header[\"NAXIS1\"]\n",
-    "y_axis = header[\"NAXIS2\"]\n",
+    "\n",
     "\n",
     "name_prefix = []\n",
     "for i,name in enumerate(image_files):\n",
     "    parts = name.split(\".f\")\n",
-    "    part = parts[0].split(\"/data/\")\n",
-    "    par = part[1].split(\"/st\")\n",
-    "    p = f\"{par[0]}{par[1]}_reg_\"\n",
+    "    part = parts[0].split(\"_ref/\")\n",
+    "    par = part[1]\n",
+    "    p = f\"{par}_reg_\"\n",
+    "    # part = parts[0].split(\"/data/\")\n",
+    "    # par = part[1].split(\"/st\")\n",
+    "    # p = f\"{par[0]}{par[1]}_reg_\"\n",
     "    name_prefix.append(p)\n",
     "\n",
-    "name = image_files[0]\n",
-    "parts = name.split(\".f\")\n",
-    "part = parts[0].split(\"/data/\")\n",
-    "par = part[1].split(\"/st\")\n",
-    "p = f\"{par[0]}\"\n",
-    "name_prefix.append(p)\n",
     "\n",
     "# 最初の画像を基準画像として読み込み\n",
     "images = []\n",
@@ -118,7 +123,8 @@
     "    print(filename)\n",
     "    images_uint16.append(image_conv(filename))\n",
     "    f.append(fits.getdata(filename))\n",
-    "    a,b = min_max(f[i], x_axis, y_axis)\n",
+    "    print(f[i].shape)\n",
+    "    a,b = min_max(f[i], f[i].shape[1], f[i].shape[0])\n",
     "    if i == 2:\n",
     "      reference_image = np.uint8(b)\n",
     "    images.append(np.uint8(b))\n",
@@ -127,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
