--- a/test_fufoc.ipynb
+++ b/test_fufoc.ipynb
@@ -283,7 +283,7 @@
     "plt.ylim(10**(-9), 1)\n",
     "plt.legend(loc = 'upper right') \n",
     "plt.savefig(\"psf.pdf\")\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
