--- a/Feature_detection.ipynb
+++ b/Feature_detection.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,21 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./test/after_ref/cor1_st_2489428266_b.fit\n",
-      "(255, 236)\n",
-      "./test/after_ref/cor1_st_2489432123_v.fit\n",
-      "(255, 251)\n",
-      "./test/after_ref/cor1_st_2489436012_w.fit\n",
-      "(255, 256)\n",
-      "./test/after_ref/cor1_st_2489439885_p.fit\n",
-      "(255, 256)\n"
+      "../preprocess_original/test/after_ref/cor1_st_2489428266_b.fit\n",
+      "../preprocess_original/test/after_ref/cor1_st_2489432123_v.fit\n",
+      "../preprocess_original/test/after_ref/cor1_st_2489436012_w.fit\n",
+      "../preprocess_original/test/after_ref/cor1_st_2489439885_p.fit\n"
      ]
     }
    ],
@@ -84,10 +80,11 @@
     "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490242451_w.fit\",\n",
     "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490246307_p.fit\"]\n",
     "\n",
-    "image_files = [\"./test/after_ref/cor1_st_2489428266_b.fit\",\n",
-    "               \"./test/after_ref/cor1_st_2489432123_v.fit\",\n",
-    "               \"./test/after_ref/cor1_st_2489436012_w.fit\",\n",
-    "               \"./test/after_ref/cor1_st_2489439885_p.fit\"]\n",
+    "image_files = [\"../preprocess_original/test/after_ref/cor1_st_2489428266_b.fit\",\n",
+    "               \"../preprocess_original/test/after_ref/cor1_st_2489432123_v.fit\",\n",
+    "               \"../preprocess_original/test/after_ref/cor1_st_2489436012_w.fit\",\n",
+    "               \"../preprocess_original/test/after_ref/cor1_st_2489439885_p.fit\"]\n",
+    "\n",
     "\n",
     "\n",
     "# 出力ディレクトリとファイル名のプレフィックスを指定\n",
@@ -100,18 +97,20 @@
     "data = hdu.data\n",
     "header = hdu.header\n",
     "\n",
-    "\n",
     "name_prefix = []\n",
     "for i,name in enumerate(image_files):\n",
     "    parts = name.split(\".f\")\n",
-    "    part = parts[0].split(\"_ref/\")\n",
-    "    par = part[1]\n",
-    "    p = f\"{par}_reg_\"\n",
-    "    # part = parts[0].split(\"/data/\")\n",
-    "    # par = part[1].split(\"/st\")\n",
-    "    # p = f\"{par[0]}{par[1]}_reg_\"\n",
+    "    part = parts[0].split(\"/test/\")\n",
+    "    par = part[1].split(\"_ref/\")\n",
+    "    p = f\"{par[1]}_reg_\"\n",
     "    name_prefix.append(p)\n",
     "\n",
+    "# name = image_files[0]\n",
+    "# parts = name.split(\".f\")\n",
+    "# part = parts[0].split(\"/data/\")\n",
+    "# par = part[1].split(\"/st\")\n",
+    "# p = f\"{par[0]}\"\n",
+    "# name_prefix.append(p)\n",
     "\n",
     "# 最初の画像を基準画像として読み込み\n",
     "images = []\n",
@@ -123,7 +122,6 @@
     "    print(filename)\n",
     "    images_uint16.append(image_conv(filename))\n",
     "    f.append(fits.getdata(filename))\n",
-    "    print(f[i].shape)\n",
     "    a,b = min_max(f[i], f[i].shape[1], f[i].shape[0])\n",
     "    if i == 2:\n",
     "      reference_image = np.uint8(b)\n",
@@ -133,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +165,7 @@
     "    # 変換行列を適用して画像を基準画像の座標系に変換\n",
     "    registered_image = cv2.warpAffine(images_uint16[i], M, (image_file.shape[1], image_file.shape[0]), flags=cv2.INTER_NEAREST)\n",
     "    registered_png= cv2.warpAffine(image_file, M, (image_file.shape[1], image_file.shape[0]), flags=cv2.INTER_NEAREST)\n",
-    "    \n",
+    "    registered_image[(registered_image <= 1000) | (registered_image >= 5000)] = 0\n",
     "    registered_images.append(registered_image)\n",
     "\n",
     "for i in range(len(registered_images)):\n",
@@ -270,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4
  },
